65Demo/src/objects/Cd_Credentials__c.object
<CustomObject>
    <description>Store your cloud storage credentials here....</description>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of the S3 server being used.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West (Oregon) Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West (Northern California) Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU (Ireland) Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific (Singapore) Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific (Sydney) Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific (Tokyo) Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America (Sao Paulo) Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cd_Access_Key__c</fullName>
        <description>Access Key part of the storage solution credentials</description>
        <label>Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_Secret_Key__c</fullName>
        <description>Secret Key part of the cloud storage solution.</description>
        <label>Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_Username__c</fullName>
        <description>Username used to login to cloud storage solution.</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cloud Storage Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Storage Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>